k8s/analytics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: polyglot-commerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
        - name: analytics-service
          image: 249123960212.dkr.ecr.ap-south-1.amazonaws.com/analytics-service:1.0
          ports:
            - containerPort: 8087

          readinessProbe:
            httpGet:
              path: /health
              port: 8087
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8087
            initialDelaySeconds: 20
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: polyglot-commerce
spec:
  selector:
    app: analytics-service
  ports:
    - port: 8087
      targetPort: 8087
  type: ClusterIP
