k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: polyglot-commerce
spec:
  replicas: 1

  selector:
    matchLabels:
      app: auth-service

  template:
    metadata:
      labels:
        app: auth-service

    spec:
      containers:
        - name: auth-service
          image: 249123960212.dkr.ecr.ap-south-1.amazonaws.com/auth-service:1.0

          ports:
            - containerPort: 8081

          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: polyglot-commerce

spec:
  selector:
    app: auth-service

  ports:
    - port: 8081
      targetPort: 8081

  type: ClusterIP
