k8s/inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: polyglot-commerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: 249123960212.dkr.ecr.ap-south-1.amazonaws.com/inventory-service:3.0
          ports:
            - containerPort: 8083

          readinessProbe:
            httpGet:
              path: /health
              port: 8083
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8083
            initialDelaySeconds: 20
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: polyglot-commerce
spec:
  selector:
    app: inventory-service
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
