k8s/notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: polyglot-commerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: 249123960212.dkr.ecr.ap-south-1.amazonaws.com/notification-service:1.0
          ports:
            - containerPort: 8086

          readinessProbe:
            httpGet:
              path: /health
              port: 8086
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8086
            initialDelaySeconds: 20
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: polyglot-commerce
spec:
  selector:
    app: notification-service
  ports:
    - port: 8086
      targetPort: 8086
  type: ClusterIP
