k8s/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: polyglot-commerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: 249123960212.dkr.ecr.ap-south-1.amazonaws.com/order-service:1.0
          ports:
            - containerPort: 8084

          readinessProbe:
            httpGet:
              path: /health
              port: 8084
            initialDelaySeconds: 15
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8084
            initialDelaySeconds: 30
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: polyglot-commerce
spec:
  selector:
    app: order-service
  ports:
    - port: 8084
      targetPort: 8084
  type: ClusterIP
