k8s/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: polyglot-commerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: 249123960212.dkr.ecr.ap-south-1.amazonaws.com/payment-service:1.0
          ports:
            - containerPort: 8085

          readinessProbe:
            httpGet:
              path: /health
              port: 8085
            initialDelaySeconds: 15
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8085
            initialDelaySeconds: 30
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: polyglot-commerce
spec:
  selector:
    app: payment-service
  ports:
    - port: 8085
      targetPort: 8085
  type: ClusterIP
